--- a/public/office.html
+++ b/public/office.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PSA • Office Portal</title>
 
   <style>
@@ -30,11 +30,11 @@
     }
     .brand{
       display:flex; align-items:center; gap: 12px;
-      min-width: 280px;
+      min-width: 260px;
     }
     .logos{ display:flex; align-items:center; gap: 10px; }
     .logo{
-      height: 38px; width: 38px;
+      height: 36px; width: 36px;
       border-radius: 50%;
       background:#fff;
       padding: 4px;
@@ -44,7 +44,6 @@
     .brand-text p{ margin:2px 0 0; font-size: 13px; opacity: .95; font-weight: 800; }
 
     .right-tools{ display:flex; align-items:center; gap: 10px; }
-
     .user-pill{
       display:flex; align-items:center; gap:10px;
       background: rgba(255,255,255,0.14);
@@ -60,7 +59,6 @@
       background:#22c55e;
       box-shadow: 0 0 0 3px rgba(34,197,94,0.22);
     }
-
     .logout-btn{
       border: 1px solid rgba(255,255,255,0.35);
       background: rgba(255,255,255,0.14);
@@ -70,52 +68,29 @@
       border-radius: 999px;
       cursor:pointer;
     }
-    .logout-btn:hover{ filter: brightness(0.96); }
 
-    /* Content */
-    .wrap{
-      max-width: 1400px;
-      margin: 22px auto;
-      padding: 0 14px;
-    }
+    /* Page */
+    .wrap{ max-width: 1400px; margin: 22px auto; padding: 0 14px; }
     .card{
       background: var(--card);
       border: 1px solid var(--border);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
-      padding: 22px;
+      padding: 18px;
     }
-    .card h2{
-      margin:0;
-      font-size: 32px;
-      font-weight: 900;
-      color:#0f172a;
+    .title-row{
+      display:flex; align-items:flex-end; justify-content:space-between;
+      gap: 12px;
     }
+    .card h2{ margin:0; font-size: 34px; font-weight: 900; color:#0f172a; }
 
-    .center-title{
-      text-align:center;
-      margin-top: 10px;
-    }
-    .center-title h3{
-      margin: 0;
-      color: var(--primary);
-      font-size: 26px;
-      font-weight: 900;
-      letter-spacing: .3px;
-    }
-    .center-title p{
-      margin: 6px 0 0;
-      color: var(--muted);
-      font-weight: 800;
-      font-size: 13px;
-    }
+    .center-title{ text-align:center; margin-top: 8px; }
+    .center-title h3{ margin: 0; color: var(--primary); font-size: 26px; font-weight: 900; }
+    .center-title p{ margin: 6px 0 0; color: var(--muted); font-weight: 800; font-size: 13px; }
 
     .controls{
-      display:flex;
-      gap: 12px;
-      align-items:center;
-      margin-top: 18px;
-      flex-wrap: wrap;
+      display:flex; gap: 12px; align-items:center;
+      margin-top: 14px; flex-wrap: wrap;
     }
     .input{
       flex: 1;
@@ -136,100 +111,73 @@
       font-weight: 900;
       cursor: pointer;
       box-shadow: 0 6px 14px rgba(0,51,160,0.22);
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      white-space: nowrap;
     }
-    .btn:hover{ filter: brightness(0.96); }
 
-    /* 2-column layout */
+    /* Two-column layout (tighter) */
     .grid{
       display:grid;
       grid-template-columns: 420px 1fr;
-      gap: 18px;
-      margin-top: 16px;
-      align-items: start;
+      gap: 14px;
+      margin-top: 14px;
+      align-items:start;
     }
 
-    /* Left update panel */
     .panel{
       background:#fff;
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.05);
-      padding: 16px;
+      border:1px solid var(--border);
+      border-radius: 14px;
+      padding: 14px;
     }
-    .panel h4{
-      margin:0 0 10px;
-      font-size: 18px;
-      font-weight: 900;
-      color:#0f172a;
-    }
-    .selbox{
+    .panel h4{ margin:0 0 10px; font-size: 18px; font-weight: 900; }
+
+    .kv{
       border: 1px solid var(--border);
       border-radius: 14px;
       padding: 12px;
-      background: #fbfcff;
-    }
-    .selrow{
-      display:flex;
-      gap: 8px;
-      margin: 6px 0;
+      background:#fbfdff;
+      margin-bottom: 10px;
       font-size: 13px;
-      font-weight: 800;
-      color:#0f172a;
     }
-    .selrow span{ color: var(--muted); min-width: 72px; }
-    .badge{
-      display:none;
+    .kv b{ display:block; margin-top: 6px; }
+    .muted{ color: var(--muted); font-weight: 800; }
+
+    .updated-badge{
       margin-top: 10px;
+      display:none;
+      align-items:center;
+      gap: 10px;
+      background:#eafff0;
+      border:1px solid #86efac;
+      color:#166534;
       padding: 10px 12px;
       border-radius: 12px;
-      border: 1px solid #86efac;
-      background: #ecfdf5;
-      color:#166534;
       font-weight: 900;
-      gap: 8px;
-      align-items:center;
+      font-size: 13px;
     }
 
-    .field{ margin-top: 12px; }
-    .field label{
-      display:block;
-      font-size: 13px;
-      font-weight: 900;
-      margin: 0 0 6px;
-      color:#0f172a;
-    }
-    .field input, .field textarea, .field select{
+    label{ display:block; font-size: 13px; font-weight: 900; margin: 12px 0 6px; }
+    textarea, input[type="text"], input[type="date"], select{
       width:100%;
-      border: 1px solid var(--border);
+      border:1px solid var(--border);
       border-radius: 12px;
-      padding: 11px 12px;
+      padding: 10px 12px;
       font-size: 14px;
       outline:none;
       background:#fff;
     }
-    .field textarea{ min-height: 80px; resize: vertical; }
-    .save-row{
-      display:flex;
-      gap: 10px;
-      align-items:center;
-      margin-top: 14px;
-    }
-    .save-btn{
+    textarea{ min-height: 86px; resize: vertical; }
+
+    .save{
       width:100%;
-      border:none;
-      border-radius: 999px;
-      padding: 12px 16px;
-      background: #0b3dbb;
-      color:#fff;
+      margin-top: 12px;
+      border: none;
+      border-radius: 12px;
+      padding: 12px 14px;
+      background: var(--primary);
+      color: #fff;
       font-weight: 900;
       cursor:pointer;
-      box-shadow: 0 6px 14px rgba(0,51,160,0.22);
     }
-    .save-btn:disabled{ opacity: .6; cursor:not-allowed; }
 
     /* Table */
     .table-wrap{
@@ -241,11 +189,11 @@
     table{
       width:100%;
       border-collapse: collapse;
-      min-width: 980px;
+      min-width: 920px;
       background:#fff;
     }
     th, td{
-      padding: 12px 14px;
+      padding: 10px 12px;
       border-bottom: 1px solid var(--border);
       font-size: 13px;
       vertical-align: top;
@@ -259,48 +207,27 @@
       z-index: 1;
       font-weight: 900;
     }
-    .muted{ color: var(--muted); font-weight: 800; }
-
-    /* Clickable row + highlight */
     tr.clickable{ cursor:pointer; }
-    tr.clickable:hover{ background: #f7fbff; }
     tr.row-selected{
-      background: #eaf2ff !important;
-      outline: 1px solid rgba(0,51,160,0.25);
+      background:#e9f1ff;
+      outline: 2px solid rgba(0,86,214,0.25);
+      outline-offset: -2px;
     }
 
-    /* Tags */
     .tag{
-      display:inline-flex;
-      align-items:center;
-      gap:6px;
+      display:inline-flex; align-items:center; gap:8px;
       padding: 6px 10px;
       border-radius: 999px;
       font-weight: 900;
       font-size: 12px;
       white-space: nowrap;
-      border: 1px solid var(--border);
-      background: #f3f4f6;
-      color:#111827;
     }
-    .tag-updated{
-      background:#ecfdf5;
-      border-color:#86efac;
-      color:#166534;
-    }
-    .tag-new{
-      background:#f3f4f6;
-      border-color:#e5e7eb;
-      color:#374151;
-    }
+    .tag-updated{ background:#eafff0; border:1px solid #86efac; color:#166534; }
+    .tag-new{ background:#f2f4f8; border:1px solid #e5e7eb; color:#334155; }
 
     @media (max-width: 1100px){
       .grid{ grid-template-columns: 1fr; }
-      table{ min-width: 860px; }
-    }
-    @media (max-width: 950px){
-      .input{ min-width: 100%; }
-      .brand-text h1{ font-size: 16px; }
+      table{ min-width: 700px; }
     }
   </style>
 
@@ -317,10 +244,8 @@
         location.replace("index.html");
         return;
       }
-
       if (role !== "office") {
         location.replace("user.html");
-        return;
       }
     })();
   </script>
@@ -329,7 +254,6 @@
 <body>
   <div class="topbar">
     <div class="topbar-inner">
-
       <div class="brand">
         <div class="logos">
           <img class="logo" src="assets/images/psa.png" alt="PSA Logo">
@@ -346,16 +270,16 @@
           <span class="dot"></span>
           <span id="userEmail">user@example.gov.ph</span>
         </div>
-
         <button id="logoutBtn" class="logout-btn" type="button">Logout</button>
       </div>
-
     </div>
   </div>
 
   <div class="wrap">
     <section class="card">
-      <h2>Failed Registration List</h2>
+      <div class="title-row">
+        <h2>Failed Registration List</h2>
+      </div>
 
       <div class="center-title">
         <h3 id="provinceTitle">Province of —</h3>
@@ -364,90 +288,65 @@
 
       <div class="controls">
         <input id="qInput" class="input" type="text" placeholder="Search TRN / Fullname / Contact / Province / Updated" />
-        <button id="refreshBtn" class="btn" type="button">
-          <span id="refreshSpinner" style="display:none;">⏳</span>
-          Refresh
-        </button>
+        <button id="refreshBtn" class="btn" type="button">Refresh</button>
       </div>
 
       <div class="grid">
-        <!-- LEFT: UPDATE PANEL -->
-        <aside id="updatePanel" class="panel">
+        <!-- LEFT: Update panel -->
+        <aside class="panel" id="updatePanel">
           <h4>Update Record</h4>
 
-          <div class="selbox">
-            <div class="selrow"><span>TRN:</span> <div id="selTrn">—</div></div>
-            <div class="selrow"><span>Name:</span> <div id="selName">—</div></div>
-            <div class="selrow"><span>Contact:</span> <div id="selContact">—</div></div>
+          <div class="kv">
+            <div><span class="muted">TRN:</span> <b id="selTrn">—</b></div>
+            <div><span class="muted">Name:</span> <b id="selName">—</b></div>
+            <div><span class="muted">Contact:</span> <b id="selContact">—</b></div>
 
-            <div id="updatedBadge" class="badge">
-              ✅ <span>Updated Before</span>
-            </div>
+            <div class="updated-badge" id="updatedBadge">✅ Updated Before</div>
           </div>
 
-          <div class="field">
-            <label for="presentAddress">Present Address</label>
-            <textarea id="presentAddress" placeholder="Enter present address..."></textarea>
-          </div>
+          <label>Present Address</label>
+          <textarea id="presentAddress" placeholder="(auto-filled)"></textarea>
 
-          <div class="field">
-            <label for="provincePresent">Province (Present)</label>
-            <input id="provincePresent" type="text" placeholder="Enter province..." />
-          </div>
+          <label>Province (Present)</label>
+          <input id="provincePresent" type="text" placeholder="(auto-filled)"/>
 
-          <div class="field">
-            <label for="dateContacted">Date Contacted</label>
-            <input id="dateContacted" type="date" />
-          </div>
+          <label>Date Contacted</label>
+          <input id="dateContacted" type="date"/>
 
-          <div class="field">
-            <label for="meansOfNotification">Means of Notification</label>
-            <select id="meansOfNotification">
-              <option value="">Select Means...</option>
-            </select>
-          </div>
+          <label>Means of Notification</label>
+          <select id="meansOfNotification">
+            <option value="">Select Means...</option>
+          </select>
 
-          <div class="field">
-            <label for="recaptureStatus">Recapture Status</label>
-            <select id="recaptureStatus">
-              <option value="">Select Status...</option>
-            </select>
-          </div>
+          <label>Recapture Status</label>
+          <select id="recaptureStatus">
+            <option value="">Select Status...</option>
+          </select>
 
-          <div class="field">
-            <label for="recaptureSchedule">Recapture Schedule</label>
-            <input id="recaptureSchedule" type="date" />
-          </div>
+          <label>Recapture Schedule</label>
+          <input id="recaptureSchedule" type="date"/>
 
-          <div class="field">
-            <label for="provinceRegistration">Province (Registration)</label>
-            <input id="provinceRegistration" type="text" placeholder="Enter province..." />
-          </div>
+          <label>Province (Registration)</label>
+          <input id="provinceRegistration" type="text" placeholder="Enter province..."/>
 
-          <div class="field">
-            <label for="cityMunicipality">City/Municipality</label>
-            <input id="cityMunicipality" type="text" placeholder="Enter city/municipality..." />
-          </div>
+          <label>City/Municipality</label>
+          <input id="cityMunicipality" type="text" placeholder="Enter city/municipality..."/>
 
-          <div class="field">
-            <label for="registrationCenter">Registration Center</label>
-            <input id="registrationCenter" type="text" placeholder="Enter registration center..." />
-          </div>
+          <label>Registration Center</label>
+          <input id="registrationCenter" type="text" placeholder="Enter registration center..."/>
 
-          <div class="save-row">
-            <button id="saveBtn" class="save-btn" type="button">Save Update</button>
-          </div>
+          <button id="saveBtn" class="save" type="button">Save Update</button>
         </aside>
 
-        <!-- RIGHT: TABLE -->
+        <!-- RIGHT: Table -->
         <div class="table-wrap">
           <table>
             <thead>
               <tr>
-                <th>TRN</th>
+                <th style="width: 270px;">TRN</th>
                 <th>Fullname</th>
-                <th>Contact No.</th>
-                <th>Updated</th>
+                <th style="width: 150px;">Contact No.</th>
+                <th style="width: 140px;">Updated</th>
               </tr>
             </thead>
             <tbody id="tbody">
@@ -456,7 +355,6 @@
           </table>
         </div>
       </div>
-
     </section>
   </div>
 
@@ -477,6 +375,6 @@
     });
   </script>
 
-  <script src="assets/js/office.js?v=200" defer></script>
+  <script src="assets/js/office.js?v=300" defer></script>
 </body>
 </html>
